# tigrecoin

./: .env.example  .gitignore  AGENTS.md  README.md  cabal.project  opencode.json  tigrecoin.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
migrations/: 001_create_users.sql  002_create_wallets.sql  003_create_transactions.sql
src/: App.hs  Config.hs
src/API/: Auth.hs  Routes.hs  Swagger.hs  Transaction.hs  User.hs  Wallet.hs
src/Auth/: JWT.hs  Middleware.hs
src/Database/: Connection.hs  Migrations.hs
src/Database/Queries/: Transaction.hs  User.hs  Wallet.hs
src/Models/: Transaction.hs  User.hs  Wallet.hs
src/Types/: AppM.hs  Errors.hs
test/: Helper.hs  Spec.hs
test/API/: AuthSpec.hs  TransactionSpec.hs  UserSpec.hs  WalletSpec.hs
test/Auth/: JWTSpec.hs
