cabal-version:   3.8
name:            tigrecoin
version:         0.1.0.0
synopsis:        TigreCoin - Educational wallet PoC in Haskell
license:         MIT
author:          TigreCoin Dev
maintainer:      dev@tigrecoin.example
build-type:      Simple

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-import-lists -Wpartial-fields -Wredundant-constraints
    -Wunused-imports -Wunused-local-binds -Wunused-matches

common deps
  build-depends:
    , aeson             ^>=2.2
    , base              >=4.16 && <5
    , bcrypt            ^>=0.0
    , bytestring        ^>=0.12
    , dotenv            ^>=0.10
    , http-types        ^>=0.12
    , base64-bytestring ^>=1.2
    , crypton           ^>=0.34
    , directory         ^>=1.3
    , lens              ^>=5.2
    , memory            ^>=0.18
    , mtl               ^>=2.3
    , postgresql-simple ^>=0.7
    , resource-pool     ^>=0.4
    , servant-server    ^>=0.20
    , servant           ^>=0.20
    , text              ^>=2.1
    , time              ^>=1.12
    , transformers      ^>=0.6
    , uuid              ^>=1.3
    , wai               ^>=3.2
    , warp              ^>=3.4

library
  import:           warnings, deps
  hs-source-dirs:   src
  exposed-modules:
    App
    Auth.JWT
    Auth.Middleware
    Config
    API.Auth
    API.User
    API.Wallet
    API.Transaction
    Database.Connection
    Database.Migrations
    Database.Queries.User
    Database.Queries.Wallet
    Database.Queries.Transaction
    Models.User
    Models.Wallet
    Models.Transaction
    Types.AppM
    Types.Errors
  ghc-options:      -O2
  default-language: Haskell2010

executable tigrecoin-exe
  import:         warnings, deps
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  tigrecoin
  ghc-options:    -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

test-suite tigrecoin-test
  import:           deps
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
     , tigrecoin
     , case-insensitive ^>=1.2
     , hspec            ^>=2.11
     , hspec-wai        ^>=0.11
     , QuickCheck       ^>=2.14
     , wai-extra        ^>=3.1
  other-modules:
    Helper
    Auth.JWTSpec
    API.AuthSpec
    API.WalletSpec
    API.UserSpec
    API.TransactionSpec
  ghc-options:      -O0 -threaded -with-rtsopts=-N
  default-language: Haskell2010
